2006-01-19  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_adec.c: (dmo_audiodec_sink_event):
	* ext/pitfdll/dmo_vdec.c: (dmo_videodec_sink_event):
	* gst-libs/ext/loader/dmo/DMO_AudioDecoder.c:
	(DMO_AudioDecoder_Flush):
	* gst-libs/ext/loader/dmo/DMO_AudioDecoder.h:
	* gst-libs/ext/loader/dmo/DMO_Filter.h:
	* gst-libs/ext/loader/dmo/DMO_VideoDecoder.c:
	(DMO_VideoDecoder_Flush):
	* gst-libs/ext/loader/dmo/DMO_VideoDecoder.h:
	* gst-libs/ext/loader/dmo/dmo.c: (DMO_Filter_Flush),
	(DMO_Filter_Create): Implement flushing for seeking.

2005-12-02  Julien MOUTTE  <julien@moutte.net>

	* configure.ac: Use 0.10.
	* ext/pitfdll/dmo_adec.c: (dmo_audiodec_sink_setcaps),
	(dmo_audiodec_chain):
	* ext/pitfdll/dmo_aenc.c: (dmo_audioenc_sink_setcaps),
	(dmo_audioenc_chain):
	* ext/pitfdll/dmo_vdec.c: (dmo_videodec_sink_setcaps),
	(dmo_videodec_chain), (dmo_videodec_change_state):
	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps),
	(dmo_videoenc_chain): leak fixes and better handling of new
	core behavior.

2005-11-28  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_adec.c: (dmo_audiodec_sink_event):
	* ext/pitfdll/dmo_vdec.c: (dmo_videodec_base_init),
	(dmo_videodec_init), (dmo_videodec_sink_setcaps),
	(dmo_videodec_sink_event):
	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_base_init),
	(dmo_videoenc_sink_setcaps):
	* ext/pitfdll/dshow_vdec.c: (dshow_videodec_base_init),
	(dshow_videodec_init), (dshow_videodec_sink_setcaps),
	(dshow_videodec_chain), (dshow_videodec_sink_event):
	* ext/pitfdll/qt_adec.c: (qt_audiodec_sink_event):
	* gst-libs/ext/loader/dmo/DMO_VideoEncoder.c:
	(DMO_VideoEncoder_Open):
	* gst-libs/ext/loader/dmo/DMO_VideoEncoder.h: Ported to latest
	core changes.

2005-10-12  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_chain):
	* gst-libs/ext/loader/dmo/dmo.h: Handle key frames correctly ! doh !

2005-10-12  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_adec.c: (dmo_audiodec_sink_event):